<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/integrity_fix_title">

    <PreferenceCategory android:key="integrity_keybox"
        android:title="@string/keybox_manager_title">

        <Preference android:key="keybox_state"
            android:title="@string/keybox_state_title"
            android:selectable="false" />

        <Preference android:key="keybox_source"
            android:title="@string/keybox_source_title"
            android:selectable="false" />

        <Preference android:key="keybox_serial"
            android:title="@string/keybox_serial_title"
            android:selectable="false" />

        <Preference android:key="keybox_pool"
            android:title="@string/keybox_pool_title"
            android:selectable="false" />

        <SwitchPreferenceCompat
            android:key="keybox_auto"
            android:title="@string/keybox_auto_title"
            android:summary="@string/keybox_auto_summary"
            android:persistent="false" />

        <SwitchPreferenceCompat
            android:key="keybox_auto_rotate"
            android:title="@string/keybox_auto_rotate_title"
            android:summary="@string/keybox_auto_rotate_summary"
            android:persistent="false" />

        <Preference
            android:key="keybox_renew"
            android:title="@string/keybox_renew_title"
            android:summary="@string/keybox_renew_summary" />

        <Preference
            android:key="keybox_clear"
            android:title="@string/keybox_clear_title"
            android:summary="@string/keybox_clear_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:key="integrity_teesim"
        android:title="@string/teesim_title">

        <Preference android:key="teesim_state"
            android:title="@string/teesim_state_title"
            android:selectable="false" />

        <Preference android:key="teesim_keybox"
            android:title="@string/teesim_keybox_title"
            android:selectable="false" />

        <SwitchPreferenceCompat
            android:key="teesim_all"
            android:title="@string/teesim_targets_all"
            android:summary="@string/teesim_targets_all_summary"
            android:persistent="false" />

        <Preference
            android:key="teesim_add"
            android:title="@string/teesim_target_add" />

        <PreferenceCategory
            android:key="teesim_target_list"
            android:title="@string/teesim_targets_category" />

        <SwitchPreferenceCompat
            android:key="teesim_auto"
            android:title="@string/teesim_auto_title"
            android:summary="@string/teesim_auto_summary"
            android:persistent="false" />

        <Preference
            android:key="teesim_add_all"
            android:title="@string/teesim_add_all"
            android:summary="@string/teesim_add_all_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:key="integrity_pif"
        android:title="@string/pif_title">

        <Preference android:key="pif_state"
            android:title="@string/pif_state_title"
            android:selectable="false" />

        <Preference android:key="pif_patch"
            android:title="@string/pif_patch_title"
            android:selectable="false" />

        <Preference android:key="pif_fingerprint"
            android:title="@string/pif_fingerprint_title"
            android:selectable="false" />

        <Preference
            android:key="pif_refresh"
            android:title="@string/pif_refresh_title"
            android:summary="@string/pif_refresh_summary" />

        <Preference
            android:key="pif_clear"
            android:title="@string/pif_clear_title"
            android:summary="@string/pif_clear_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="integrity_auto_check"
        android:title="@string/cooldown_category">

        <ListPreference
            android:key="check_period"
            android:title="@string/check_period_title"
            android:summary="%s"
            android:entries="@array/cooldown_entries"
            android:entryValues="@array/cooldown_values"
            android:persistent="false" />

        <ListPreference
            android:key="unlock_cooldown"
            android:title="@string/unlock_cooldown_title"
            android:summary="%s"
            android:entries="@array/cooldown_entries"
            android:entryValues="@array/cooldown_values"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
