<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/teesim_title">

    <PreferenceCategory android:key="teesim_status"
        android:title="@string/integrity_status_category">

        <Preference android:key="teesim_state"
            android:title="@string/teesim_state_title"
            android:selectable="false" />

        <Preference android:key="teesim_keybox"
            android:title="@string/teesim_keybox_title"
            android:selectable="false" />

    </PreferenceCategory>

    <PreferenceCategory android:key="teesim_targets"
        android:title="@string/teesim_targets_category">

        <SwitchPreferenceCompat
            android:key="teesim_all"
            android:title="@string/teesim_targets_all"
            android:summary="@string/teesim_targets_all_summary"
            android:persistent="false" />

        <Preference
            android:key="teesim_add"
            android:title="@string/teesim_target_add" />

        <PreferenceCategory
            android:key="teesim_target_list"
            android:title="@string/teesim_targets_category" />

    </PreferenceCategory>

    <PreferenceCategory android:key="teesim_auto_group"
        android:title="@string/teesim_auto_category">

        <SwitchPreferenceCompat
            android:key="teesim_auto"
            android:title="@string/teesim_auto_title"
            android:summary="@string/teesim_auto_summary"
            android:persistent="false" />

        <Preference
            android:key="teesim_add_all"
            android:title="@string/teesim_add_all"
            android:summary="@string/teesim_add_all_summary" />

    </PreferenceCategory>

</PreferenceScreen>
