<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pif_title">

    <PreferenceCategory android:key="pif_status"
        android:title="@string/integrity_status_category">

        <Preference android:key="pif_state"
            android:title="@string/pif_state_title"
            android:selectable="false" />

        <Preference android:key="pif_patch"
            android:title="@string/pif_patch_title"
            android:selectable="false" />

        <Preference android:key="pif_fingerprint"
            android:title="@string/pif_fingerprint_title"
            android:selectable="false" />

    </PreferenceCategory>

    <PreferenceCategory android:key="pif_actions"
        android:title="@string/pif_title">

        <Preference
            android:key="pif_refresh"
            android:title="@string/pif_refresh_title"
            android:summary="@string/pif_refresh_summary" />

        <Preference
            android:key="pif_clear"
            android:title="@string/pif_clear_title"
            android:summary="@string/pif_clear_summary" />

    </PreferenceCategory>

</PreferenceScreen>
