<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/game_perf_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_perf_enabled"
        android:title="@string/game_perf_main_switch"
        android:persistent="false" />

    <SwitchPreferenceCompat
        android:key="game_mem_clean"
        android:title="@string/game_mem_clean_title"
        android:summary="@string/game_mem_clean_summary"
        android:persistent="false" />

    <!-- Filled in GamePerfFragment -->
    <PreferenceCategory
        android:key="game_apps"
        android:title="@string/game_apps_category" />

    <com.android.settingslib.widget.FooterPreference
        android:key="game_perf_footer"
        android:title="@string/game_perf_footer"
        android:selectable="false" />

</PreferenceScreen>
